--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PSITS - Philippine Society of Information Technology Students</title>
+    <title>NDKC-PSITS | Philippine Society of Information Technology Students</title>
   </head>
   <body>
     <div id="root"></div>
